# rush

./: .gitattributes  .gitignore  .macos-pty-log.txt  AiAgent.cs  AiCommand.cs  AiProvider.cs  BinaryWatcher.cs  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  CatCommand.cs  ColorPicker.cs  CommandTranslator.cs  Config.cs  ConfigSync.cs  FileListCommand.cs  HelpCommand.cs  HelpRenderer.cs  JobManager.cs  LICENSE  Lexer.cs  LineEditor.cs  LlmMode.cs  McpInstaller.cs  McpMode.cs  McpResources.cs  McpSshMode.cs  ObjectifyConfig.cs  OutputRenderer.cs  Parser.cs  PathUtils.cs  Posix.cs  Program.cs  Prompt.cs  README.md  RedirectionParser.cs  ReloadState.cs  Rush.csproj  RushHost.cs  RushHostUI.cs  (+19 more)
.claude/agents/: triage-report.md
.github/workflows/: ci.yml  release.yml
Rush.Tests/: AiCommandTests.cs  AutosuggestionTests.cs  BashToRushDocTests.cs  ClassTests.cs  ColorPickerTests.cs  CommandTranslatorTests.cs  EnumTests.cs  IntegrationTests.cs  LexerTests.cs  LsCommandTests.cs  NewFeaturesIntegrationTests.cs  ObjectifyTests.cs  PlatformBlockTests.cs  RedirectionParserTests.cs  RegexTests.cs  Rush.Tests.csproj  ScriptEngineTriageTests.cs  SyntaxHighlighterTests.cs  TabCompleterDotCompletionTests.cs  TabCompleterHelperTests.cs  TestHelper.cs  ThemeColorEnvVarTests.cs  UserManualDocTests.cs  WindowsTests.cs
Rush.Tests/Fixtures/: advanced-features-test.sh  builtins-test.rush  config-sync-test.sh  integration_test.rush  llm-advanced-test.sh  llm-mode-test.ps1  mcp-mode-test.ps1  mcp-mode-test.sh  mcp-ssh-test.sh  pipeline-ops-test.rush  portability-test.rush  ps5-advanced-test.sh  rush-c-test.sh  windows-verify-test.sh
crates/ai/: Cargo.toml
crates/ai/src/: main.rs
crates/mcp-local/: Cargo.toml
crates/mcp-local/src/: main.rs
crates/mcp-ssh/: Cargo.toml
crates/mcp-ssh/src/: main.rs
crates/objectify/: Cargo.toml
crates/objectify/src/: main.rs
crates/rush-agent/: Cargo.toml
crates/rush-agent/src/: main.rs
crates/rush-cli/: Cargo.toml  build.rs
crates/rush-cli/src/: builtins.rs  completer.rs  highlighter.rs  main.rs  prompt.rs  repl.rs  repl_v2.rs  signals.rs  validator.rs
crates/rush-cli/tests/: audit_wire_protocol.rs  pty_paint_no_absolute.rs  pty_paste_stress.rs  pty_smoke.rs  script_execution.rs
crates/rush-cli/tests/pty/: mod.rs
crates/rush-core/: Cargo.toml
crates/rush-core/src/: ai.rs  ast.rs  config.rs  dispatch.rs  env.rs  eval.rs  flags.rs  hints.rs  integration_tests.rs  jobs.rs  lang_spec.rs  lexer.rs  lib.rs  llm.rs  mcp.rs  mcp_client.rs  mcp_install.rs  mcp_ssh.rs  objectify_config.rs  parser.rs  pipeline.rs  plugin.rs  posix_tests.rs  process.rs  script_surface_tests.rs  stdlib.rs  sync.rs  test_locks.rs  theme.rs  token.rs  trap.rs  triage.rs  value.rs
crates/rush-core/src/platform/: mod.rs  unix.rs
crates/rush-line/: Cargo.toml
crates/rush-line/examples/: demo.rs  raw_bytes.rs
crates/rush-line/src/: buffer.rs  completion.rs  decoder.rs  engine.rs  highlighter.rs  hint.rs  history.rs  keymap.rs  layout.rs  lib.rs  painter.rs  trace.rs  tty.rs  unix_input.rs  validator.rs  vi.rs
crates/rush-ps-bridge/: Cargo.toml
crates/rush-ps-bridge/src/: lib.rs
docs/: architecture.md  bash-to-rush.md  deployment-dependencies.md  design-examples.md  elevator-pitch.md  llm-mode-design.md  objectify.yaml  rush-features.md  rush-for-dotnet-claude.md  rush-help.yaml  rush-lang-spec.yaml  rust-rush-features.md  status-line-design.md  test-overview.md  toolkit-overview.md  user-manual.md
docs/investigations/: 2026-04-29-macos-pty-hang.md
docs/posix/: posix-spec.yaml
docs/posix/reference/: edge-cases.yaml  environment.yaml  headers.yaml  regex.yaml  shell-language.yaml  system-interfaces.yaml  utilities-a-l.yaml  utilities-m-z.yaml
dotnet/: AiAgent.cs  AiCommand.cs  AiProvider.cs  BinaryWatcher.cs  CatCommand.cs  CommandTranslator.cs  HelpRenderer.cs  LineEditor.cs  McpMode.cs  OutputRenderer.cs  Program.cs  RedirectionParser.cs  Rush.csproj  RushHost.cs  SshPool.cs  SyncSsh.cs  Transpiler.cs  build-all.sh  build-fast.sh
dotnet/Rush.Tests/: BashToRushDocTests.cs  ClassTests.cs  ConfigTests.cs  ObjectifyTests.cs  PlatformBlockTests.cs  ReloadStateTests.cs  SshLlmSessionTests.cs  TabCompleterDotCompletionTests.cs  TabCompleterHelperTests.cs
dotnet/Rush.Tests/Fixtures/: advanced-features-test.sh  integration_test.rush  llm-advanced-test.sh  llm-mode-test.ps1  pipeline-ops-test.rush  ps5-bridge-test.sh  rush-c-test.sh
dotnet/rush-ps-bridge/: BridgeMode.cs  McpMode.cs  Program.cs  PsRunner.cs  README.md  build.ps1  rush-ps-bridge.csproj
dotnet/rush-ps-bridge/Tests/: BridgeModeTests.cs  McpModeTests.cs  PsRunnerTests.cs  TestHelper.cs  (+1 more)
editors/: install-all.sh  windows-terminal.json
editors/emacs/: install.sh  rush-mode.el
editors/sublime/: Rush.sublime-syntax  install.sh
editors/vim/: install.sh
editors/vscode/: install.sh  language-configuration.json  package.json
internal/: rabbit-hole.md
internal/reference/: deployment-dependencies.md  rush-lang-spec-long-version.yaml
rush-powershell/: .gitignore  ColorPicker.cs  ConfigSync.cs  HelpCommand.cs  JobManager.cs  Lexer.cs  McpInstaller.cs  McpResources.cs  McpSshMode.cs  ObjectifyConfig.cs  Parser.cs  PathUtils.cs  Program.cs  Prompt.cs  Rush.csproj  RushHostRawUI.cs  RushVersion.cs  SqlCommand.cs  SqlConnectionConfig.cs  SqlDriverManager.cs  SyncPath.cs  TabCompleter.cs  TerminalBackground.cs  Theme.cs  UncHandler.cs  build-rust.sh  build-win.sh  install.sh  pipeline.sh
rush-powershell/Rush.Tests/: IntegrationTests.cs  LexerTests.cs  LsCommandTests.cs  NewFeaturesIntegrationTests.cs  RedirectionParserTests.cs  RegexTests.cs  ScriptEngineTriageTests.cs  SecretsFileTests.cs  SyntaxHighlighterTests.cs  ThemeColorEnvVarTests.cs  UserManualDocTests.cs  WindowsTests.cs
scripts/: macos-pty-investigate.sh  triage-cron.sh
scripts/leak-hunt/: README.md  auto-watch.sh  driver-stable.sh  driver.sh  monitor.sh  pty-repro.sh  run-llm.sh  watch-live.sh
tests/: remote-ai-test.sh  remote-mcp-ssh-test.sh  remote-test.sh  remote-win-test.sh  theme-test.rush  theme-test.sh  unc-ssh-test.sh
(+10 files in other folders)
