[workspace]
members = ["crates/rush-core", "crates/rush-cli", "crates/rush-ps-bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
repository = "https://github.com/mhasse1/rush"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
