[package]
name = "mcp-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP SSH gateway — exposes remote shells (dynamic per-host) to AI agents over JSON-RPC stdio"

[dependencies]
rush-core = { path = "../rush-core" }

[[bin]]
name = "mcp-ssh"
path = "src/main.rs"

[lints]
workspace = true
