[package]
name = "rush-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Code-style agent using Rush shell and local LLM"

[[bin]]
name = "rush-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
