[package]
name = "rush-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rush shell binary"

[dependencies]
rush-core = { path = "../rush-core" }
reedline = { git = "https://github.com/mhasse1/reedline.git", branch = "main" }
nu-ansi-term = "0.50"
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
