[package]
name = "rush-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rush shell binary"

[dependencies]
rush-core = { path = "../rush-core" }
rushline = { git = "https://github.com/mhasse1/rushline.git", branch = "main" }
nu-ansi-term = "0.50"
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
