[package]
name = "rush-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Rush shell — lexer, parser, AST, evaluator"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
