[package]
name = "rush-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Rush shell — lexer, parser, AST, evaluator"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
glob = "0.3"
serde_yaml = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["rt", "macros"] }
getrandom = "0.2"

# libc covers what we need on both Unix and Windows (the Windows side
# is link-mangled to the MSVCRT — _dup / _dup2 / _pipe / _close /
# _get_osfhandle). Used in llm.rs::run_dispatch_captured for fd-level
# capture and in the Unix-only pty paths.
[dependencies.libc]
version = "0.2"

[lints]
workspace = true
