[package]
name = "rush-ps-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PowerShell plugin bridge — routes ps...end blocks to PS7/PS5 via JSON envelope"

[dependencies]
rush-core = { path = "../rush-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
